# Blog-apps-pkce

./: .gitignore  PKCE_EXPLANATION.md  README.md  SETUP.md  VAGRANT_README.md  Vagrantfile  docker-compose.yml  env.example  fix-docker-permissions.sh  presentation.md  setup-custom-theme.sh  simple_working_pkce.sh  vagrant-setup.sh
.github/workflows/: build-push-backend.yml  ci-backend.yml
ansible/: docker-setup.yml
backend/: Cargo.toml  Dockerfile  posts.json
backend/posts/: another-post.md  blog-app.md  curl-test-post.md  hello-world.md  my-first-blog-post.md  my-first-post.md  my-new-blog-post.md  pkce-success.md  quick-test.md  rust-blog-backend.md
backend/src/: main.rs  utils.rs
backend/src/auth/: jwt.rs  login.rs  mod.rs  oauth.rs  test_token.rs
backend/src/markdown/: mod.rs  reader.rs  writer.rs
docker/: Dockerfile.backend
frontend/static/: styles.css
frontend/templates/: index.html  post.html  preview.html
frontend/templates/admin/: edit.html  new.html
keycloak/themes/custom-login/: README.md  theme.properties
keycloak/themes/custom-login/login/: error.ftl  info.ftl  login-reset-password.ftl  login.ftl  logout-confirm.ftl  register.ftl  template.ftl
keycloak/themes/login-theme/: theme.properties
keycloak/themes/login-theme/login/: theme.properties
keycloak/themes/login-theme/login/resources/css/: login-theme.css
keycloak/themes/login-theme/login/resources/js/: login-theme-js.js
nginx/: nginx.conf
