[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "http1", "http2", "json"] }

tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
tower = "0.4"
tower-http = { version = "0.6.6", features = ["cors", "trace", "add-extension"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
markdown = "1.0.0"
chrono = { version = "0.4.42", features = ["serde", "clock"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0.99"
thiserror = "1.0"
slug = "0.1"
jsonwebtoken = { version = "9.2", features = ["use_pem"] }
oauth2 = "4.4"

reqwest = { version = "0.11", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
base64 = { version = "0.21", features = ["alloc"] }
headers = "0.4.1"
http = "1.3.1"
futures-util = "0.3"
async-trait = "0.1.89"

urlencoding = "2.1"
sha2 = "0.10"
rand = "0.8"
dashmap = "6.1.0"